; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_vm_machdep.c_get_pcb_user_save_td.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_vm_machdep.c_get_pcb_user_save_td.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.savefpu = type { i32 }
%struct.thread = type { i32, i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@cpu_max_ext_state_size = common dso_local global i32 0, align 4
@XSAVE_AREA_ALIGN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Unaligned pcb_user_save area\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %union.savefpu* @get_pcb_user_save_td(%struct.thread* %0) #0 {
  %2 = alloca %struct.thread*, align 8
  %3 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %2, align 8
  %4 = load %struct.thread*, %struct.thread** %2, align 8
  %5 = getelementptr inbounds %struct.thread, %struct.thread* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.thread*, %struct.thread** %2, align 8
  %8 = getelementptr inbounds %struct.thread, %struct.thread* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @PAGE_SIZE, align 4
  %11 = mul nsw i32 %9, %10
  %12 = add nsw i32 %6, %11
  %13 = load i32, i32* @cpu_max_ext_state_size, align 4
  %14 = load i32, i32* @XSAVE_AREA_ALIGN, align 4
  %15 = call i32 @roundup2(i32 %13, i32 %14)
  %16 = sub nsw i32 %12, %15
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @XSAVE_AREA_ALIGN, align 4
  %19 = srem i32 %17, %18
  %20 = icmp eq i32 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @KASSERT(i32 %21, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* %3, align 4
  %24 = sext i32 %23 to i64
  %25 = inttoptr i64 %24 to %union.savefpu*
  ret %union.savefpu* %25
}

declare dso_local i32 @roundup2(i32, i32) #1

declare dso_local i32 @KASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
